# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import testsRouter from "./tests";
 import settingsRouter from "./settings";
 import dashboardRouter from "./dashboard";
 import holidaysRouter from "./holidays";
+import monthlyGoalsRouter from "./monthly-goals";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use("/tests", testsRouter);
 router.use("/settings", settingsRouter);
 router.use("/dashboard", dashboardRouter);
 router.use("/holidays", holidaysRouter);
+router.use("/monthly-goals", monthlyGoalsRouter);
 
 export default router;
